# ChangeLog for app-xemacs/mmm-mode
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-xemacs/mmm-mode/ChangeLog,v 1.20 2011/07/22 11:25:00 xarthisius Exp $

*mmm-mode-1.06 (16 Jul 2013)

  16 Jul 2013; Mats Lidell <matsl@gentoo.org> +metadata.xml,
  +mmm-mode-1.06.ebuild:
  Upstream experimental version bump and use EAPI=5
