@@ -1,1 +1,2 @@
 DIST mmm-mode-1.06-pkg.tar.gz 205072 SHA256 97bd8a32241980fa162b0de8b5492c5e12cf3323bdaeabea45f8917f968dcbef SHA512 43ff77aabb27e75415835cd93253ba7fd99792852647af1dbb8c90abaf78df4d479670c1c9da04a3950f6f90a737b86ed0e3db61e0e21a0bf436f7e37bbe82fe WHIRLPOOL 6e4d7e16f8fd70ecb0581f5f4fc492860e6de6d3d1406d39318c47da39e3d5c4e615eac74bbaaf15bbb539036a303bfb67d889322ddeeba84b162a26eea34978
+DIST mmm-mode-1.08-pkg.tar.gz 205225 SHA256 ce0771e4ff9cae792f1e64fd0f88eb36713bef5419a5fcf1fcf2c2d38e4f2991 SHA512 873e19f4cb4e2d83e633f82a8006421974389fe32ba303bf7f642858f47ffb7cb00f1c203327292d7cea19e666a6a3ac31a6baed272523952fb13ff909181a14 WHIRLPOOL 1cefe28e27f58141cce7fb863c9f032e8d2a59767cde68a033d9a52bdb3bc12149e2566254188a7480fccea5c79df5b6f4f6f78272735e1df84c7e0d0f55cd2e
