@@ -1,6 +1,11 @@
 # ChangeLog for app-xemacs/mmm-mode
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/app-xemacs/mmm-mode/ChangeLog,v 1.20 2011/07/22 11:25:00 xarthisius Exp $
+
+*mmm-mode-1.08 (11 Jul 2014)
+
+  11 Jul 2014; Mats Lidell <matsl@gentoo.org> +mmm-mode-1.08.ebuild:
+  Pre release version bump
 
 *mmm-mode-1.06 (16 Jul 2013)
 
